database/clickhouse/clusters/sg3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse
  namespace: clickhouse
  annotations:
    cert-manager.io/cluster-issuer: "canhnv-com-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - clickhouse.sg3.k3s.canhnv.com
      secretName: clickhouse-sg3-tls
  rules:
    - host: clickhouse.sg3.k3s.canhnv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse
                port:
                  number: 8123
